[gd_scene load_steps=2 format=3 uid="uid://bpxe7s72d1ol6"]

[ext_resource type="Script" uid="uid://cepxbsflnewdd" path="res://scripts/Password.gd" id="1_j6wn5"]

[node name="Password" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Label" parent="."]
layout_mode = 0
offset_left = 599.0
offset_top = 51.0
offset_right = 639.0
offset_bottom = 74.0
text = "Header"

[node name="RuleList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1026.0
offset_top = 87.0
offset_right = 1066.0
offset_bottom = 164.0
tooltip_text = "This will be where I list the rules of the safe password creating game"

[node name="Rule1" type="Label" parent="RuleList"]
layout_mode = 2
text = "This will be where I list the Rules"

[node name="Rule2" type="Label" parent="RuleList"]
layout_mode = 2
text = "Rule2"

[node name="Rule3" type="Label" parent="RuleList"]
layout_mode = 2
text = "Rule3"

[node name="Field" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 463.0
offset_top = 189.0
offset_right = 828.0
offset_bottom = 220.0
placeholder_text = "Field where user will enter password"
alignment = 3
max_length = 11

[node name="CheckBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 465.0
offset_top = 231.0
offset_right = 827.0
offset_bottom = 262.0
text = "Check Button (If answer is correct)"

[node name="Feedback" type="Label" parent="."]
layout_mode = 0
offset_left = 585.0
offset_top = 448.0
offset_right = 625.0
offset_bottom = 471.0
text = "Feedback"

[node name="BackBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 588.0
offset_right = 171.0
offset_bottom = 663.0
text = "Back"
script = ExtResource("1_j6wn5")
